[project]
name = "noel-3d"
version = "0.0.0"
description = "Run 3D animations on objects using programmable holiday lights"
authors = [
  { name = "Mahyar Mirrashed", email = "mahyar.mirrashed@ptxtrimble.com" },
]
maintainers = [
  { name = "Mahyar Mirrashed", email = "mahyar.mirrashed@ptxtrimble.com" },
]
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.10,<4.0"
dependencies = []
classifiers = [
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["matplotlib>=3.9.2"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
